--- a/src/main/resources/templates/clients/modals/updateModal.html
+++ b/src/main/resources/templates/clients/modals/updateModal.html
@@ -36,7 +36,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="vi-edit-be-button" type="button" onclick="document.getElementById('vi-be-edit-form').submit()" class="btn btn-primary vis-button-style">Save changes</button>
+                <button id="vi-edit-be-button" type="button" onclick="document.getElementById('vi-cl-edit-form').submit()" class="btn btn-primary vis-button-style">Save changes</button>
             </div>
         </div>
     </div>
