--- a/src/main/resources/templates/balances/view.html
+++ b/src/main/resources/templates/balances/view.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="https://thymeleaf.org">
 <body id="body-pd">
-<header th:replace="fragments/header :: header"> </header>
-<div th:replace="fragments/navbar :: navbar"> </div>
+<header th:replace="/fragments/header :: header"> </header>
+<div th:replace="/fragments/navbar :: navbar"> </div>
 
 <div class="bg-light">
     <h4>Balances</h4>
