--- a/src/main/resources/templates/bankaccounts/view.html
+++ b/src/main/resources/templates/bankaccounts/view.html
@@ -49,5 +49,5 @@
             </div>
         </div>
     </body>
-    <div th:replace="fragments/footer :: footer"> </div>
+    <div th:replace="/fragments/footer :: footer"> </div>
 </html>
