--- a/src/main/resources/templates/balances/view.html
+++ b/src/main/resources/templates/balances/view.html
@@ -14,6 +14,6 @@
 </div>
 </body>
 
-<div th:replace="fragments/footer :: footer"> </div>
+<div th:replace="/fragments/footer :: footer"> </div>
 
 </html>
