--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="https://thymeleaf.org">
 <body id="body-pd">
-    <header th:replace="fragments/header :: header"> </header>
-    <div th:replace="fragments/navbar :: navbar"> </div>
+    <header th:replace="/fragments/header :: header"> </header>
+    <div th:replace="/fragments/navbar :: navbar"> </div>
 
     <div class="bg-light">
         <div th:replace="users/modals/updateModal :: user-update-modal"> </div>
@@ -41,6 +41,6 @@
     </div>
 </body>
 
-<div th:replace="fragments/footer :: footer"> </div>
+<div th:replace="/fragments/footer :: footer"> </div>
 
 </html>
