--- a/src/main/resources/templates/balances/view.html
+++ b/src/main/resources/templates/balances/view.html
@@ -4,7 +4,7 @@
 <header th:replace="/fragments/header :: header"> </header>
 <div th:replace="/fragments/navbar :: navbar"> </div>
 
-<div class="bg-light">
+<div class="vis-bg-light">
     <h4>Balances</h4>
     <div class="card" margin=3%>
         <div class="card-body">
