--- a/src/main/resources/templates/bankaccounts/view.html
+++ b/src/main/resources/templates/bankaccounts/view.html
@@ -4,7 +4,7 @@
         <header th:replace="/fragments/header :: header"> </header>
         <div th:replace="/fragments/navbar :: navbar"> </div>
 
-        <div class="bg-light">
+        <div class="vis-bg-light">
             <div th:replace="/bankaccounts/modals/createModal :: bankaccount-create-modal"> </div>
             <div th:replace="/bankaccounts/modals/deleteModal :: bankaccount-delete-modal"> </div>
             <div th:replace="/bankaccounts/modals/updateModal :: bankaccount-update-modal"> </div>
