--- a/src/main/resources/templates/clients/view.html
+++ b/src/main/resources/templates/clients/view.html
@@ -4,7 +4,7 @@
 <header th:replace="/fragments/header :: header"> </header>
 <div th:replace="/fragments/navbar :: navbar"> </div>
 
-<div class="bg-light">
+<div class="vis-bg-light">
     <div th:replace="/clients/modals/createModal :: clients-create-modal"> </div>
     <div th:replace="/clients/modals/deleteModal :: clients-delete-modal"> </div>
     <div th:replace="/clients/modals/updateModal :: clients-update-modal"> </div>
