--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,5 @@
 <header th:fragment="header" class="header" id="header">
+    <link th:href="@{/styles/vitall-solutions.css}" rel="stylesheet" />
     <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
     <div class="vis-initials" th:text="${initials}"></div>
     <link rel="icon" type="image/x-icon" href="../../../../../../vitall-solutions/src/main/resources/images/favicon.ico"/>
