--- a/src/main/resources/static/styles/vitall-solutions.css
+++ b/src/main/resources/static/styles/vitall-solutions.css
@@ -38,7 +38,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: var(--white-color);
+    background-color: rgba(0,0,0,0);
     z-index: var(--z-fixed);
     transition: .5s
 }
@@ -88,7 +88,8 @@ a {
     grid-template-columns: max-content max-content;
     align-items: center;
     column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem
+    padding: .5rem 0 .5rem 1.5rem;
+    text-decoration: none;
 }
 
 .nav_logo {
@@ -143,6 +144,11 @@ a {
 
 .height-100 {
     height: 100vh
+}
+
+.vis-bg-light {
+    margin-top: 75px;
+    background-color: rgba(0,0,0,0)!important;
 }
 
 @media screen and (min-width: 768px) {
