--- a/src/main/resources/templates/beneficiaries/view.html
+++ b/src/main/resources/templates/beneficiaries/view.html
@@ -4,7 +4,7 @@
         <header th:replace="/fragments/header :: header"> </header>
         <div th:replace="/fragments/navbar :: navbar"> </div>
 
-        <div class="bg-light">
+        <div class="vis-bg-light">
             <div th:replace="/beneficiaries/modals/createModal :: beneficiaries-create-modal"> </div>
             <div th:replace="/beneficiaries/modals/deleteModal :: beneficiaries-delete-modal"> </div>
             <div th:replace="/beneficiaries/modals/updateModal :: beneficiaries-update-modal"> </div>
