--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -4,7 +4,7 @@
     <header th:replace="/fragments/header :: header"> </header>
     <div th:replace="/fragments/navbar :: navbar"> </div>
 
-    <div class="bg-light">
+    <div class="vis-bg-light">
         <div th:replace="/users/modals/updateModal :: user-update-modal"> </div>
         <h4>Manage users</h4>
         <div class="card" margin=3%>
