--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -89,5 +89,12 @@
         }
 
         window.onload=function(){ setTimeout(function(){ 		window.scrollTo(0, 1); 	}, 0); }
+
+        var supportsOrientationChange = "onorientationchange" in window,
+            orientationEvent = supportsOrientationChange ? "orientationchange" : "resize";
+
+        window.addEventListener(orientationEvent, function() {
+            window.onload=function(){ setTimeout(function(){ 		window.scrollTo(0, 1); 	}, 0); }
+        }, false);
     </script>
 </div>
